--- a/index.htm
+++ b/index.htm
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <!--[if lt IE 8 ]><html class="ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
@@ -32,7 +33,7 @@
 
          <hgroup>
             <h1><a href="index.htm">Freshpick</a></h1>
-            <h3>Your Awesome Slogan Here</h3>
+            <h3>Clymene</h3>
          </hgroup>
 
 
